[package]
name = "audio-exploratorium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.17"
wasm-bindgen = "0.2.83"
wasm-logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dependencies.web-sys]
version = "0.3.60"
features = [
    "AudioContext",
    "AudioDestinationNode",
    "OscillatorNode",
    "OscillatorType",
]